@@ -17,6 +17,10 @@ KPSE_COMMON([ttf2pk], [no-define])
 
 AC_CONFIG_HEADERS([config.h])
 
+m4_include([../../version.ac])[] dnl define tex_live_version
+AC_DEFINE([TL_VERSION], ["TeX Live tex_live_version()"],
+          [Define to the current TeX Live version string.])
+
 AC_SEARCH_LIBS([floor], [m])
 
 KPSE_KPATHSEA_FLAGS
