@@ -1,3 +1,9 @@
+2021-02-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* ttf2pk.c, ttf2tfm.c, configure.ac:
+	Show TeX Live version by version option.
+	Show bug report address in usage.
+
 2020-02-16  Karl Berry  <karl@tug.org>
 
 	* pklib.c (dpi): declare extern, as also defined in ftlib.c,
